--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/danghai1412/lab6#readme",
   "dependencies": {
+    "bootstrap": "^5.2.1",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.20",
